
2018-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: unreached warning after EXIT SECTION/PARAGRAPH/PERFORM[CYCLE]

2018-03-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_move): SET ... TO TRUE with figurative constant
	* scanner.l: fix bug #499 tokenizer combining partial words

2018-03-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l (scan_floating_numeric): rewritten to merge 2018-01-12,
	  significant allows 36 digits now (according to COBOL 202x)
	* typeck.c (validate_move): adjustments to merge 2018-01-14
	* typeck.c (validate_move), config.def: check for new config option
	  cb_move_fig_space_to_numeric / move-figurative-space-to-numeric

2018-03-08  Ron Norman <rjn@inglenet.com>

	* codegen.c (deduce_initialize_type): use 'cob_move' for signed numeric
	  items to fix wrong group initialization (issue mentioned in bug #61)

2018-03-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c: actually handle items of CB_CATEGORY_NATIONAL / PIC_NATIONAL
	  as national items, not as alphanumeric
	* reserved.c (function_list): adjustments for CB_CATEGORY_NATIONAL
	* field.c (validate_any_length_item): adjustments for CB_CATEGORY_NATIONAL
	* typeck.c (validate_move): added missing warning for truncation of
	  numeric binary fields when -fbinary-truncate is active;
	  removed false warning for truncation of literal to alphanumeric field
	  when only spaces were truncated

2018-03-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_name_1): adjustments for CB_TAG_REPORT/CB_TAG_REPORT_LINE
	* field.c (check_picture_item): fixed tree cast error for setting
	  implied size/type for VALUE SPACE

2018-03-05  Ron Norman <rjn@inglenet.com>

	Changes to solve REPORT problems related to COB_TREE_DEBUG
	* tree.h: added CB_REF_OR_REPORT_P and CB_REPORT_PTR
	* tree.c (cb_ref): verify caller passed a CB_REFERENCE