@@ -8,6 +8,10 @@
 	* typeck.c (validate_move): SET ... TO TRUE with figurative constant
 	* scanner.l: fix bug #499 tokenizer combining partial words
 
+2018-03-10  Ron Norman <rjn@inglenet.com>
+
+	* codegen.c: Fix for INITIALIZE of signed numeric (2018-03-08)
+
 2018-03-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* scanner.l (scan_floating_numeric): rewritten to merge 2018-01-12,
